--- a/index.html
+++ b/index.html
@@ -79,22 +79,22 @@
                                 <input type="radio" value="nao informar" name="sex" required>Prefiro não informar
                             </label>
                         </div>
-                        <label><input type="text" placeholder="Outro" required></label>
+                        <label><input type="text" placeholder="Outro"></label>
                     </div>
                     <div class="objective_form">
                         <div class="title_form">Objetivo profissional:</div>
                         <div class="checkbox_content">
                             <label class="options">
-                                <input type="checkbox" required>Novo emprego
+                                <input type="checkbox">Novo emprego
                             </label>
                             <label class="options">
-                                <input type="checkbox" required>Melhorar meu cargo
+                                <input type="checkbox">Melhorar meu cargo
                             </label>
                             <label class="options">
-                                <input type="checkbox" readonly>Não possuo
+                                <input type="checkbox">Não possuo
                             </label>
                         </div>
-                        <label><input type="text" placeholder="Outro" required></label>
+                        <label><input type="text" placeholder="Outro"></label>
                     </div>
                     <button class="button_enter">Cadastrar</button>
                 </form>
