--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 <input type="radio" value="masculino" name="sex" required>Masculino
                             </label>
                             <label class="options">
-                                <input type="radio" value="feminio" name="sex" required>Feminino
+                                <input type="radio" value="feminino" name="sex" required>Feminino
                             </label>
                             <label class="options">
                                 <input type="radio" value="nao informar" name="sex" required>Prefiro não informar
